# jam-drop

./: .env.example  .gitignore  .gitleaks.toml  .mc  CLAUDE.md  PLAN.md  README.md
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml  release.yml
docs/decisions/: 0001-stack-tauri-vanilla-axum.md  README.md
documentacion/: ARQUITECTURA.md  AVANCE_Y_PENDIENTES.md  BUILD_Y_RELEASE.md  CONFIGURACION_Y_OPERACION.md  README.md  TECNOLOGIAS.md
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  daemon.rs  lib.rs  main.rs  peers.rs
